connecting frontend to backend

--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -35,7 +35,7 @@
 
 
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sidenav class="sidenav">
+    <mat-sidenav mode="side" #sidenav class="sidenav">
         <mat-nav-list>
             <a mat-list-item routerLink="/home">Home</a>
             <a mat-list-item routerLink="/profile">Profile</a>
