--- a/src/app/add-student-dialog/add-student-dialog.component.html
+++ b/src/app/add-student-dialog/add-student-dialog.component.html
@@ -1,7 +1,34 @@
 <h2 mat-dialog-title>Add Student</h2>
 
-<form>
+<form [formGroup]="studentForm" (ngSubmit)="onSubmit()">
     <div mat-dialog-content>
-
+        <mat-form-field style="width: 100%;">
+            <mat-label>First Name</mat-label>
+            <input matInput placeholder="First Name" formControlName="first_name">
+        </mat-form-field>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Last Name</mat-label>
+            <input matInput placeholder="Last Name" formControlName="last_name">
+        </mat-form-field>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Date of Birth</mat-label>
+            <input matInput placeholder="Date of Birth" formControlName="date_of_birth">
+        </mat-form-field>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Gender</mat-label>
+            <input matInput placeholder="Gender" formControlName="gender">
+        </mat-form-field>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Address</mat-label>
+            <input matInput placeholder="Address" formControlName="address">
+        </mat-form-field>
+        <mat-form-field style="width: 100%;">
+            <mat-label>Phone Number</mat-label>
+            <input matInput placeholder="Phone Number" formControlName="phone_number">
+        </mat-form-field>
     </div>
+    <mat-dialog-actions>
+        <button mat-button mat-dialog-close>CANCEL</button>
+        <button mat-raised-button color="primary" type="submit">SUBMIT</button>
+    </mat-dialog-actions>
 </form>
