--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar style="position: sticky;top: 0;z-index: 5;">
-    <button (click)="sidenav.toggle()" mat-icon-button>
+    <button (click)="clickMenu()" mat-icon-button>
         <mat-icon>menu</mat-icon>
     </button>
 
@@ -12,6 +12,11 @@
         <button routerLink="" mat-button>
             <mat-icon>dashboard</mat-icon>
             Dashboard
+        </button>
+        <button routerLink="/student-dashboard" routerLinkActive #studentLink="routerLinkActive"
+            [color]="studentLink.isActive?'primary':'undefined'" mat-button>
+            <mat-icon>group</mat-icon>
+            Students
         </button>
         <button mat-button>
             <mat-icon>
@@ -36,13 +41,15 @@
 
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav mode="side" #sidenav class="sidenav">
-        <mat-nav-list>
-            <a mat-list-item routerLink="/home">Home</a>
+        <mat-action-list>
+            <a mat-list-item routerLink="/home">
+                Home
+            </a>
             <a mat-list-item routerLink="/profile">Profile</a>
             <a mat-list-item routerLink="/classes">Classes</a>
             <a mat-list-item routerLink="/grades">Grades</a>
             <a mat-list-item routerLink="/attendance">Attendance</a>
-        </mat-nav-list>
+        </mat-action-list>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet></router-outlet>
