--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -2,15 +2,14 @@
     <div class="cards">
         <mat-card class="example-card">
             <mat-card-header>
-                <mat-card-title>Shiba Inu</mat-card-title>
-                <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                <mat-card-title>Students Overview</mat-card-title>
+                <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
 
             <mat-card-content>
             </mat-card-content>
             <mat-card-actions>
-                <button mat-button>LIKE</button>
-                <button mat-button>SHARE</button>
+
             </mat-card-actions>
         </mat-card>
     </div>
