--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -2,7 +2,7 @@
     <div class="cards">
         <mat-card class="example-card">
             <mat-card-header>
-                <mat-card-title>Students Overview</mat-card-title>
+                <mat-card-title>Students Dashboard Overview</mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
 
