display students errors

--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -17,3 +17,52 @@
         <button mat-button (click)="addStudent()" style="margin-left: 0;"><mat-icon>add</mat-icon>Add Student</button>
     </div>
 </div>
+
+<!-- {{students|json}} -->
+
+<div>
+    <table *ngIf="students" [dataSource]="students.data" mat-table class="mat-elevation-z8">
+        <!-- ng-container - an angular directive that acts as a plaehoder in the template -->
+        <!-- it does not add extra nodes to the DOM -->
+
+        <!-- matColumnDef - directive is used to define a column in the angular material table -->
+        <!-- first name is the unique name for the column and will be used to identify and reference this column -->
+
+        <ng-container matColumnDef="first_name">
+            <th mat-header-cell *matHeaderCellDef>First Name</th>
+            <td mat-cell *matCellDef="let student" {{student.first_name}}></td>
+        </ng-container>
+
+        <ng-container matColumnDef="last_name">
+            <th mat-header-cell *matHeaderCellDef>Last Name</th>
+            <td mat-cell *matCellDef="let student">{{student.last_name}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="date_of_birth">
+            <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
+            <td mat-cell *matCellDef="let student">{{student.date_of_birth}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="gender">
+            <th mat-header-cell *matCellDef>Gender</th>
+            <td mat-cell *matCellDef="let student">{{student.gender}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="address">
+            <th mat-header-cell *matHeaderCellDef>Address</th>
+            <td mat-cell *matCellDef="let student">{{student.address}}</td>
+            <td></td>
+        </ng-container>
+
+        <ng-container matColumnDef="phone_number">
+            <th mat-header-cell *matHeaderCellDef>Phone Number</th>
+            <td mat-cell *matCellDef="let student">{{student.phone_number}}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+    </table>
+
+</div>
+
+<!-- <mat-paginator *ngIf="students" [showFirstLastButtons]="true" [pageSizeOptions]="[5,10,20]"></mat-paginator> -->
