--- a/src/app/add-student-dialog/add-student-dialog.component.html
+++ b/src/app/add-student-dialog/add-student-dialog.component.html
@@ -10,10 +10,7 @@
             <mat-label>Last Name</mat-label>
             <input matInput placeholder="Last Name" formControlName="last_name">
         </mat-form-field>
-        <!-- <mat-form-field style="width: 100%;">
-            <mat-label>Date of Birth</mat-label>
-            <input matInput placeholder="Date of Birth" formControlName="date_of_birth">
-        </mat-form-field> -->
+
         <mat-form-field style="width: 100%;">
             <mat-label>Date of birth</mat-label>
             <input matInput [matDatepicker]="picker">
@@ -23,9 +20,13 @@
         </mat-form-field>
 
         <mat-form-field style="width: 100%;">
-            <mat-label>Gender</mat-label>
-            <input matInput placeholder="Gender" formControlName="gender">
+            <mat-label>Select Gender</mat-label>
+            <mat-select>
+                <mat-option value="male">Male</mat-option>
+                <mat-option value="female">Female</mat-option>
+            </mat-select>
         </mat-form-field>
+
         <mat-form-field style="width: 100%;">
             <mat-label>Address</mat-label>
             <input matInput placeholder="Address" formControlName="address">
