worked on add teacher dialog

--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -14,14 +14,12 @@
         </mat-card>
     </div>
     <div class="buttons">
-        <button mat-button (click)="addStudent()" style="margin-left: 0;"><mat-icon>add</mat-icon>Add Student</button>
+        <button mat-button (click)="addStudent()"><mat-icon>add</mat-icon>Add Student</button>
     </div>
 </div>
 
-<!-- {{students|json}} -->
-
 <!-- <div>
-    <table *ngIf="students" [dataSource]="students.data" mat-table class="mat-elevation-z8"> -->
+    <table *ngIf="students" [dataSource]="students" mat-table class="mat-elevation-z8"> -->
 <!-- ng-container - an angular directive that acts as a plaehoder in the template -->
 <!-- it does not add extra nodes to the DOM -->
 
