--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -1,1 +1,16 @@
-<p>teacher-dashboard-home works!</p>
+<div class="content">
+    <div class="cards">
+        <mat-card class="example-card">
+            <mat-card-header>
+                <mat-card-title>Teachers Dashboard Overview</mat-card-title>
+                <mat-card-subtitle></mat-card-subtitle>
+            </mat-card-header>
+            <mat-card-content></mat-card-content>
+            <mat-card-actions></mat-card-actions>
+        </mat-card>
+    </div>
+    <div class="buttons">
+        <button mat-button (click)="add_teacher()"><mat-icon>add</mat-icon>Add Teacher</button>
+    </div>
+
+</div>
