--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -18,49 +18,45 @@
     </div>
 </div>
 
-<!-- <div>
-    <table *ngIf="students" [dataSource]="students" mat-table class="mat-elevation-z8"> -->
-<!-- ng-container - an angular directive that acts as a plaehoder in the template -->
-<!-- it does not add extra nodes to the DOM -->
+<table style="margin-top: 1rem;margin-bottom: 1rem;" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-<!-- matColumnDef - directive is used to define a column in the angular material table -->
-<!-- first name is the unique name for the column and will be used to identify and reference this column -->
+    <!-- First Name Column -->
+    <ng-container matColumnDef="first_name">
+        <th mat-header-cell *matHeaderCellDef> First Name </th>
+        <td mat-cell *matCellDef="let student"> {{student.first_name}} </td>
+    </ng-container>
 
-<!-- <ng-container matColumnDef="first_name">
-            <th mat-header-cell *matHeaderCellDef>First Name</th>
-            <td mat-cell *matCellDef="let student" {{student.first_name}}></td>
-        </ng-container>
+    <!-- Last Name Column -->
+    <ng-container matColumnDef="last_name">
+        <th mat-header-cell *matHeaderCellDef> Last Name </th>
+        <td mat-cell *matCellDef="let student"> {{student.last_name}} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="last_name">
-            <th mat-header-cell *matHeaderCellDef>Last Name</th>
-            <td mat-cell *matCellDef="let student">{{student.last_name}}</td>
-        </ng-container>
+    <!-- Date of Birth Column -->
+    <ng-container matColumnDef="date_of_birth">
+        <th mat-header-cell *matHeaderCellDef> Date of Birth </th>
+        <td mat-cell *matCellDef="let student"> {{student.date_of_birth | date:'fullDate'}} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="date_of_birth">
-            <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
-            <td mat-cell *matCellDef="let student">{{student.date_of_birth}}</td>
-        </ng-container>
+    <!-- Gender Column -->
+    <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef> Gender </th>
+        <td mat-cell *matCellDef="let student"> {{student.gender}} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="gender">
-            <th mat-header-cell *matCellDef>Gender</th>
-            <td mat-cell *matCellDef="let student">{{student.gender}}</td>
-        </ng-container>
+    <!-- Address Column -->
+    <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef> Address </th>
+        <td mat-cell *matCellDef="let student"> {{student.address}} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="address">
-            <th mat-header-cell *matHeaderCellDef>Address</th>
-            <td mat-cell *matCellDef="let student">{{student.address}}</td>
-            <td></td>
-        </ng-container>
+    <!-- Phone Number Column -->
+    <ng-container matColumnDef="phone_number">
+        <th mat-header-cell *matHeaderCellDef> Phone Number </th>
+        <td mat-cell *matCellDef="let student"> {{student.phone_number}} </td>
+    </ng-container>
 
-        <ng-container matColumnDef="phone_number">
-            <th mat-header-cell *matHeaderCellDef>Phone Number</th>
-            <td mat-cell *matCellDef="let student">{{student.phone_number}}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
-    </table>
-
-</div> -->
-
-<!-- <mat-paginator *ngIf="students" [showFirstLastButtons]="true" [pageSizeOptions]="[5,10,20]"></mat-paginator> -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+<mat-paginator [pageSize]="10" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
