worked on student component and dashboard

--- a/src/app/add-student-dialog/add-student-dialog.component.html
+++ b/src/app/add-student-dialog/add-student-dialog.component.html
@@ -37,7 +37,7 @@
         </mat-form-field>
     </div>
     <mat-dialog-actions>
-        <button mat-button mat-dialog-close>CANCEL</button>
+        <button mat-button mat-dialog-close="">CANCEL</button>
         <button mat-raised-button color="primary" type="submit">SUBMIT</button>
     </mat-dialog-actions>
 </form>
