--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -5,12 +5,18 @@
                 <mat-card-title>Students Dashboard Overview</mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
-
-            <mat-card-content>
+            <mat-card-content class="dashboard-card-content">
+                <!-- <div id="content"> -->
+                <div style="display: flex;flex-direction: column;gap: 16px;">
+                    <div class="mat-headline-2">
+                        {{dataSource.data.length}}
+                    </div>
+                    <div class="mat-caption">
+                        Total Number of Students
+                    </div>
+                </div>
+                <!-- </div> -->
             </mat-card-content>
-            <mat-card-actions>
-
-            </mat-card-actions>
         </mat-card>
     </div>
     <div class="buttons">
@@ -59,4 +65,4 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSize]="10" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
