--- a/src/app/student-dashboard-home/student-dashboard-home.component.scss
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.scss
@@ -18,3 +18,18 @@
   display: flex;
   margin-top: 1rem;
 }
+
+.dashboard-card-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
+
+// #content {
+//   display: flex;
+//   width: 100%;
+//   justify-content: space-around;
+//   gap: 15px;
+// }
