--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -13,3 +13,16 @@
         <button mat-button (click)="add_teacher()"><mat-icon>add</mat-icon>Add Teacher</button>
     </div>
 </div>
+
+
+<table mat-table>
+    <ng-container matColumnDef="first_name">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.first_name}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+</table>
+
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
