--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -15,10 +15,34 @@
 </div>
 
 
-<table mat-table>
+<table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="first_name">
-        <th mat-header-cell *matHeaderCellDef></th>
+        <th mat-header-cell *matHeaderCellDef>First Name</th>
         <td mat-cell *matCellDef="let teacher">{{teacher.first_name}}</td>
+    </ng-container>
+    <ng-container matColumnDef="last_name">
+        <th mat-header-cell *matHeaderCellDef>Last Name</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.last_name}}</td>
+    </ng-container>
+    <ng-container matColumnDef="date_of_birth">
+        <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.date_of_birth}}</td>
+    </ng-container>
+    <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef>Gender</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.gender}}</td>
+    </ng-container>
+    <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef>Address</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.address}}</td>
+    </ng-container>
+    <ng-container matColumnDef="phone_number">
+        <th mat-header-cell *matHeaderCellDef>Phone Number</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.phone_number}}</td>
+    </ng-container>
+    <ng-container matColumnDef="qualification">
+        <th mat-header-cell *matHeaderCellDef>Qualification</th>
+        <td mat-cell *matCellDef="let teacher">{{teacher.qualification}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
