used toolbar component as a directive

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
             </mat-icon>
             Teachers
         </button>
-        <button mat-button>
+        <button mat-button routerLink="/classes-dashboard">
             <mat-icon>other_houses</mat-icon>
             Classes</button>
         <button mat-button>
