--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.scss
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.scss
@@ -18,3 +18,11 @@
   display: flex;
   margin-top: 1rem;
 }
+
+.dashboardContent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
