--- a/src/app/student-dashboard/student-dashboard.component.html
+++ b/src/app/student-dashboard/student-dashboard.component.html
@@ -1,40 +1,4 @@
-<mat-toolbar style="position: sticky;top: 0;z-index: 5;">
-    <button (click)="clickMenu()" mat-icon-button>
-        <mat-icon>menu</mat-icon>
-    </button>
-
-    <button mat-icon-button>
-        <mat-icon>school</mat-icon>
-    </button>
-    <span>Academy</span>
-
-    <div class="toolBarContents">
-        <button routerLink="/dashboard" mat-button routerLinkActive #dashboardLink="routerLinkActive"
-            [color]="dashboardLink.isActive?'primary':'undefined'">
-            <mat-icon>dashboard</mat-icon>
-            Dashboard
-        </button>
-        <button routerLink="/student-dashboard" routerLinkActive #studentLink="routerLinkActive"
-            [color]="studentLink.isActive?'primary':'undefined'" mat-button>
-            <mat-icon>group</mat-icon>
-            Students
-        </button>
-        <button mat-button routerLink="/teacher-dashboard">
-            <mat-icon>
-                group
-            </mat-icon>
-            Teachers
-        </button>
-        <button mat-button>
-            <mat-icon>other_houses</mat-icon>
-            Classes</button>
-        <button mat-button>
-            <mat-icon>group</mat-icon>
-            Enrollments
-        </button>
-
-    </div>
-</mat-toolbar>
+<app-toolbar></app-toolbar>
 
 <mat-sidenav-container class="sidenav-container">
     <mat-sidenav mode="side" #sidenav class="sidenav">
