--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -5,8 +5,16 @@
                 <mat-card-title>Teachers Dashboard Overview</mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
-            <mat-card-content></mat-card-content>
-            <mat-card-actions></mat-card-actions>
+            <mat-card-content class="dashboardContent">
+                <div style="display: flex;gap: 16px;flex-direction: column;">
+                    <div class="mat-headline-2">
+                        {{dataSource.data.length}}
+                    </div>
+                    <div class="mat-caption">
+                        Total Number of Teachers
+                    </div>
+                </div>
+            </mat-card-content>
         </mat-card>
     </div>
     <div class="buttons">
@@ -15,7 +23,7 @@
 </div>
 
 
-<table mat-table [dataSource]="dataSource">
+<table style="margin-top: 1rem;margin-bottom: 1rem;" mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="first_name">
         <th mat-header-cell *matHeaderCellDef>First Name</th>
         <td mat-cell *matCellDef="let teacher">{{teacher.first_name}}</td>
@@ -26,7 +34,7 @@
     </ng-container>
     <ng-container matColumnDef="date_of_birth">
         <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.date_of_birth}}</td>
+        <td mat-cell *matCellDef="let teacher">{{teacher.date_of_birth | date:'fullDate'}}</td>
     </ng-container>
     <ng-container matColumnDef="gender">
         <th mat-header-cell *matHeaderCellDef>Gender</th>
