--- a/src/app/classes-dashboard-home/classes-dashboard-home.component.html
+++ b/src/app/classes-dashboard-home/classes-dashboard-home.component.html
@@ -1,1 +1,15 @@
-<p>classes-dashboard-home works!</p>
+<div class="content">
+    <mat-card class="example-card">
+        <mat-card-header>
+            <mat-card-title>
+                Classes Dashboard Overview
+            </mat-card-title>
+            <mat-card-subtitle></mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+
+        </mat-card-content>
+    </mat-card>
+</div>
+
+<button>Add Class</button>
