--- a/src/app/classes-dashboard-home/classes-dashboard-home.component.html
+++ b/src/app/classes-dashboard-home/classes-dashboard-home.component.html
@@ -10,6 +10,20 @@
 
         </mat-card-content>
     </mat-card>
+    <button style="margin-top: 1rem;" mat-button (click)="addClass()">Add Class</button>
 </div>
 
-<button>Add Class</button>
+<table mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let class">{{class.name}}</td>
+    </ng-container>
+    <ng-cotainer matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let class">{{class.description}}</td>
+    </ng-cotainer>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+</table>
+
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
