--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,34 +1,4 @@
-<mat-toolbar style="position: sticky;top: 0;z-index: 5;">
-    <button mat-icon-button>
-        <mat-icon>school</mat-icon>
-    </button>
-    <span>Academy</span>
-
-    <div class="toolBarContents">
-        <button mat-button routerLink="/dashboard" routerLinkActive #dashboardLink="routerLinkActive"
-            [color]="dashboardLink.isActive?'primary':'undefined'">
-            <mat-icon>dashboard</mat-icon>
-            Dashboard
-        </button>
-        <button routerLink="/student-dashboard" mat-button>
-            <mat-icon>group</mat-icon>
-            Students
-        </button>
-        <button routerLink="/teacher-dashboard" mat-button>
-            <mat-icon>
-                group
-            </mat-icon>
-            Teachers
-        </button>
-        <button mat-button routerLink="/classes-dashboard">
-            <mat-icon>other_houses</mat-icon>
-            Classes</button>
-        <button mat-button>
-            <mat-icon>group</mat-icon>
-            Enrollments
-        </button>
-    </div>
-</mat-toolbar>
+<app-toolbar></app-toolbar>
 
 <div class="content">
 
@@ -57,7 +27,7 @@
                     <p>Manage Teachers</p>
                 </mat-card-content>
             </mat-card>
-            <mat-card class="example-card">
+            <mat-card class="example-card" routerLink="/classes-dashboard">
                 <mat-card-header>
                     <mat-card-title><mat-icon>other_houses</mat-icon></mat-card-title>
                     <mat-card-subtitle>Classes</mat-card-subtitle>
@@ -69,13 +39,13 @@
             <mat-card class="example-card">
                 <mat-card-header>
                     <mat-card-title><mat-icon>group</mat-icon></mat-card-title>
-                    <mat-card-subtitle>Classes</mat-card-subtitle>
+                    <mat-card-subtitle>Courses</mat-card-subtitle>
                 </mat-card-header>
                 <mat-card-content>
                     <p>Manage Courses</p>
                 </mat-card-content>
             </mat-card>
-            <mat-card class="example-card">
+            <mat-card class="example-card" routerLink="/enrollments-dashboard">
                 <mat-card-header>
                     <mat-card-title><mat-icon>group</mat-icon></mat-card-title>
                     <mat-card-subtitle>Enrollment</mat-card-subtitle>
