--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -30,7 +30,8 @@
             [color]="classesLink.isActive?'primary':'undfined'">
             <mat-icon>other_houses</mat-icon>
             Classes</button>
-        <button mat-button>
+        <button mat-button routerLink="/enrollments-dashboard" routerLinkActive #enrollmentsLink="routerLinkActive"
+            [color]="enrollmentsLink.isActive?'primary':'undefined'">
             <mat-icon>group</mat-icon>
             Enrollments
         </button>
