--- a/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
+++ b/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
@@ -2,7 +2,7 @@
     <mat-card class="example-card">
         <mat-card-header>
             <mat-card-title>
-                Enrollments Overview
+                Enrollments Dashboard Overview
             </mat-card-title>
             <mat-card-subtitle>
 
@@ -14,3 +14,19 @@
     </mat-card>
     <button style="margin-top: 1rem;" mat-button (click)="add_enrollment_dialog()">Add Enrollment</button>
 </div>
+
+<table style="margin-top: 1rem;" mat-table [dataSource]="dataSource">
+    <ng-container matColumnDef="student_id">
+        <th mat-header-cell *matHeaderCellDef>Student Id</th>
+        <td mat-cell *matCellDef="let enrollment">{{enrollment.student_id}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="class_id">
+        <th mat-header-cell *matHeaderCellDef>Class Id</th>
+        <td mat-cell *matCellDef="let enrollment">{{enrollment.class_id}}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+</table>
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
