--- a/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
+++ b/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.html
@@ -8,8 +8,15 @@
 
             </mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
-
+        <mat-card-content class="dashboard-card-content">
+            <div style="display: flex;flex-direction: column;gap: 16px;">
+                <div class="mat-headline-2">
+                    {{dataSource.data.length}}
+                </div>
+                <div class="mat-caption">
+                    Number Of Enrollments
+                </div>
+            </div>
         </mat-card-content>
     </mat-card>
     <button style="margin-top: 1rem;" mat-button (click)="add_enrollment_dialog()">Add Enrollment</button>
