--- a/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.scss
+++ b/src/app/enrollments-dashboard-home/enrollments-dashboard-home.component.scss
@@ -11,3 +11,12 @@
   height: 300px;
   cursor: pointer;
 }
+
+.dashboard-card-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
