--- a/src/app/classes-dashboard-home/classes-dashboard-home.component.scss
+++ b/src/app/classes-dashboard-home/classes-dashboard-home.component.scss
@@ -10,3 +10,11 @@
   align-items: center;
   margin-top: 1rem;
 }
+
+.dashboard-card-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+}
