working on login UI and routing

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
             </mat-form-field>
             <div mat-dialog-actions>
                 <button mat-button>LOGIN</button>
-                <button mat-button>SIGN UP</button>
+                <button mat-button routerLink="sign-up">SIGN UP</button>
             </div>
         </form>
     </mat-card>
