--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,18 @@
 <div class="content">
     <mat-card class="example-card">
         <form style="padding: 50px;" [formGroup]="loginForm">
+            <h1 mat-dialog-title>LOGIN</h1>
             <mat-form-field style="width: 100%;">
                 <mat-label>Email</mat-label>
                 <input matInput placeholder="Email" formControlName="email">
             </mat-form-field>
             <mat-form-field style="width:100%">
                 <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password">
+                <input type="password" matInput placeholder="Password" formControlName="password">
             </mat-form-field>
             <div mat-dialog-actions>
-                <button mat-button type="submit" (click)="login()">LOGIN</button>
-                <button mat-button routerLink="/sign-up">SIGN UP</button>
+                <button mat-raised-button type="submit" color="primary" (click)="login()">LOGIN</button>
+                <button mat-button routerLink="/sign-up" color="primary">SIGN UP</button>
             </div>
         </form>
     </mat-card>
