--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,6 +1,7 @@
 <div class="content">
     <mat-card class="example-card">
         <form style="padding: 50px;" [formGroup]="signUpForm">
+            <h1 mat-dialog-title>SIGN UP</h1>
             <mat-form-field style="width: 100%;">
                 <mat-label>Name</mat-label>
                 <input matInput placeholder="Name" formControlName="name">
@@ -11,15 +12,15 @@
             </mat-form-field>
             <mat-form-field style="width:100%">
                 <mat-label>Password</mat-label>
-                <input matInput placeholder="Password" formControlName="password">
+                <input matInput type="password" placeholder="Password" formControlName="password">
             </mat-form-field>
             <mat-form-field style="width:100%">
                 <mat-label>Confirm Password</mat-label>
                 <input matInput placeholder="Confirm Password" formControlName="password_confirmation">
             </mat-form-field>
             <div mat-dialog-actions>
-                <button mat-button type="submit" (click)="on_sign_up()">SIGN UP</button>
-                <button mat-button routerLink="/login">LOGIN</button>
+                <button mat-raised-button type="submit" (click)="on_sign_up()" color="primary">SIGN UP</button>
+                <button mat-button routerLink="/login" color="primary">LOGIN</button>
             </div>
         </form>
     </mat-card>
