--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -16,7 +16,7 @@
             </mat-form-field>
             <mat-form-field style="width:100%">
                 <mat-label>Confirm Password</mat-label>
-                <input matInput placeholder="Confirm Password" formControlName="password_confirmation">
+                <input type="password" matInput placeholder="Confirm Password" formControlName="password_confirmation">
             </mat-form-field>
             <div mat-dialog-actions>
                 <button mat-raised-button type="submit" (click)="on_sign_up()" color="primary">SIGN UP</button>
