--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -66,6 +66,15 @@
         <td mat-cell *matCellDef="let student"> {{student.phone_number}} </td>
     </ng-container>
 
+    <!-- actions -->
+     <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Actions</th>
+        <td mat-cell *matCellDef="let student">
+            <button mat-button (click)="edit_student(student)">Edit</button>
+        </td>
+        <td></td>
+     </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
