--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -80,6 +80,9 @@
         <mat-icon>edit</mat-icon>
         Edit
       </button>
+      <button mat-icon-button color="warn" (click)="delete_student(student)">
+        <mat-icon>delete</mat-icon>
+      </button>
     </td>
   </ng-container>
 
