--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -1,60 +1,78 @@
 <div class="content">
-    <div class="cards">
-        <mat-card class="example-card">
-            <mat-card-header>
-                <mat-card-title>Teachers Dashboard Overview</mat-card-title>
-                <mat-card-subtitle></mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content class="dashboardContent">
-                <div style="display: flex;gap: 16px;flex-direction: column;">
-                    <div class="mat-headline-2">
-                        {{dataSource.data.length}}
-                    </div>
-                    <div class="mat-caption">
-                        Total Number of Teachers
-                    </div>
-                </div>
-            </mat-card-content>
-        </mat-card>
-    </div>
-    <div class="buttons">
-        <button mat-button (click)="add_teacher()"><mat-icon>add</mat-icon>Add Teacher</button>
-    </div>
+  <div class="cards">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Teachers Dashboard Overview</mat-card-title>
+        <mat-card-subtitle></mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content class="dashboardContent">
+        <div style="display: flex; gap: 16px; flex-direction: column">
+          <div class="mat-headline-2">
+            {{ dataSource.data.length }}
+          </div>
+          <div class="mat-caption">Total Number of Teachers</div>
+        </div>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div class="buttons">
+    <button mat-button (click)="add_teacher()">
+      <mat-icon>add</mat-icon>Add Teacher
+    </button>
+  </div>
 </div>
 
+<table
+  style="margin-top: 1rem; margin-bottom: 1rem"
+  mat-table
+  [dataSource]="dataSource"
+>
+  <ng-container matColumnDef="first_name">
+    <th mat-header-cell *matHeaderCellDef>First Name</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.first_name }}</td>
+  </ng-container>
+  <ng-container matColumnDef="last_name">
+    <th mat-header-cell *matHeaderCellDef>Last Name</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.last_name }}</td>
+  </ng-container>
+  <ng-container matColumnDef="date_of_birth">
+    <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
+    <td mat-cell *matCellDef="let teacher">
+      {{ teacher.date_of_birth | date : "fullDate" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="gender">
+    <th mat-header-cell *matHeaderCellDef>Gender</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.gender }}</td>
+  </ng-container>
+  <ng-container matColumnDef="address">
+    <th mat-header-cell *matHeaderCellDef>Address</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.address }}</td>
+  </ng-container>
+  <ng-container matColumnDef="phone_number">
+    <th mat-header-cell *matHeaderCellDef>Phone Number</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.phone_number }}</td>
+  </ng-container>
+  <ng-container matColumnDef="qualification">
+    <th mat-header-cell *matHeaderCellDef>Qualification</th>
+    <td mat-cell *matCellDef="let teacher">{{ teacher.qualification }}</td>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let teacher">
+      <button mat-icon-button color="warn" (click)="delete_teacher(teacher)">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </td>
+    <td></td>
+  </ng-container>
 
-<table style="margin-top: 1rem;margin-bottom: 1rem;" mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="first_name">
-        <th mat-header-cell *matHeaderCellDef>First Name</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.first_name}}</td>
-    </ng-container>
-    <ng-container matColumnDef="last_name">
-        <th mat-header-cell *matHeaderCellDef>Last Name</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.last_name}}</td>
-    </ng-container>
-    <ng-container matColumnDef="date_of_birth">
-        <th mat-header-cell *matHeaderCellDef>Date Of Birth</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.date_of_birth | date:'fullDate'}}</td>
-    </ng-container>
-    <ng-container matColumnDef="gender">
-        <th mat-header-cell *matHeaderCellDef>Gender</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.gender}}</td>
-    </ng-container>
-    <ng-container matColumnDef="address">
-        <th mat-header-cell *matHeaderCellDef>Address</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.address}}</td>
-    </ng-container>
-    <ng-container matColumnDef="phone_number">
-        <th mat-header-cell *matHeaderCellDef>Phone Number</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.phone_number}}</td>
-    </ng-container>
-    <ng-container matColumnDef="qualification">
-        <th mat-header-cell *matHeaderCellDef>Qualification</th>
-        <td mat-cell *matCellDef="let teacher">{{teacher.qualification}}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row;columns:displayedColumns"></tr>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
 
-<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,20,50]" (page)="onPageChange($event)"></mat-paginator>
+<mat-paginator
+  [pageSize]="5"
+  [pageSizeOptions]="[5, 10, 20, 50]"
+  (page)="onPageChange($event)"
+></mat-paginator>
