--- a/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
+++ b/src/app/teacher-dashboard-home/teacher-dashboard-home.component.html
@@ -60,11 +60,13 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let teacher">
-      <button mat-icon-button color="warn" (click)="delete_teacher(teacher)">
+      <button mat-button (click)="edit_teacher(teacher)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-button color="warn" (click)="delete_teacher(teacher)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
-    <td></td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
