--- a/src/app/classes-dashboard-home/classes-dashboard-home.component.html
+++ b/src/app/classes-dashboard-home/classes-dashboard-home.component.html
@@ -32,13 +32,13 @@
     <th mat-header-cell *matHeaderCellDef>Description</th>
     <td mat-cell *matCellDef="let class">{{ class.description }}</td>
   </ng-cotainer>
-  <ng-container *matCoumnDef="actions">
+  <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let class">
-      <button mat-button>
+      <button mat-button (click)="edit_class(class)">
         <mat-icon>edit</mat-icon>
       </button>
-      <button mat-button>
+      <button mat-button color="warn" (click)="delete_class(class)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
