--- a/src/app/student-dashboard-home/student-dashboard-home.component.html
+++ b/src/app/student-dashboard-home/student-dashboard-home.component.html
@@ -78,9 +78,8 @@
     <td mat-cell *matCellDef="let student">
       <button mat-button (click)="edit_student(student)">
         <mat-icon>edit</mat-icon>
-        Edit
       </button>
-      <button mat-icon-button color="warn" (click)="delete_student(student)">
+      <button mat-button color="warn" (click)="delete_student(student)">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
